--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -38,7 +38,7 @@
         <div class="col-xs-6 col-md-3">
             <img style="height: 300px;" src="~/css/Images/230940320058.jpeg" alt="Lalit Image" class="rounded">
             <h3>Lalit Nanker</h3>
-            <h5>vedantsahu668@gmail.com</h5>
+            <h5>nankarlalit7@gmail.com</h5>
             <h5>9993161044</h5>
         </div>
 
